--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <spring.version>4.3.7.RELEASE</spring.version>
         <spring-data-mongodb.version>1.10.1.RELEASE</spring-data-mongodb.version>
         <mongo-java-driver.version>3.4.2</mongo-java-driver.version>
+        <jackson-databind.version>2.8.7</jackson-databind.version>
     </properties>
 
     <!-- add findBugs-->
@@ -30,6 +31,29 @@
             <artifactId>spring-context</artifactId>
             <version>${spring.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson-databind.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20160810</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.3</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-mongodb</artifactId>
