--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <spring.version>4.3.7.RELEASE</spring.version>
         <spring-data-mongodb.version>1.10.1.RELEASE</spring-data-mongodb.version>
         <mongo-java-driver.version>3.4.2</mongo-java-driver.version>
