--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.provectus</groupId>
-    <artifactId>tax-management</artifactId>
+    <artifactId>tax-management-core</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>tax-management-web</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
