--- a/tax-management-core/pom.xml
+++ b/tax-management-core/pom.xml
@@ -8,7 +8,7 @@
         <groupId>com.provectus</groupId>
         <artifactId>provectus-finance-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../provectusfinanceparent</relativePath>
+        <relativePath>../provectus-finance-parent</relativePath>
     </parent>
 
     <artifactId>tax-management-core</artifactId>
