--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,17 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <java.version>1.8</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
+
     <modules>
         <module>tax-management-web</module>
         <module>tax-management-core</module>
-        <module>provectus-finance-parent</module>
+        <module>tax-management-spring-boot</module>
     </modules>
 </project>
