--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,6 @@
         <module>tax-management-web</module>
         <module>tax-management-core</module>
         <module>tax-management-spring-boot</module>
+        <module>gwt-webapp</module>
     </modules>
 </project>
